force-app/main/default/objects/Record_Approval__c/Record_Approval__c.object-meta.xml
<CustomObject>
    <label>Record Approval</label>
    <nameField>
        <displayFormat>RA-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Record Approvals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>