force-app/main/default/objects/Record_Approval__c/fields/Service_Delivered__c.field-meta.xml
<CustomField>
    <fullName>Service_Delivered__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Delivered</label>
    <referenceTo>enrtcr__Support_Delivered__c</referenceTo>
    <relationshipLabel>Record Approvals</relationshipLabel>
    <relationshipName>Record_Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>